--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
 		"@hookform/resolvers": "^2.5.2",
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
 		"@material-ui/lab": "^4.0.0-alpha.58",
+		"@mui/icons-material": "^5.11.0",
+		"@mui/material": "^5.11.0",
 		"@reduxjs/toolkit": "^1.6.0",
 		"axios": "^0.21.1",
 		"compressorjs": "^1.0.7",
