--- a/backend/.env
+++ b/backend/.env
@@ -9,10 +9,10 @@ SALT_ROUND=10
 #(default=10)
 
 # MongoDb URL online server
-MONGO_URL=yourCloudUrlMongoServer
+MONGO_URL=mongodb+srv://hoangdv2429:zFsq9Fm8XqERPryR@cluster0.8t2lf0i.mongodb.net/?retryWrites=true&w=majority
 
 # MongoDb URL local server
-MONGO_URL_LOCAL=mongodb://localhost:27017/dictionary
+MONGO_URL_LOCAL=mongodb+srv://hoangdv2429:zFsq9Fm8XqERPryR@cluster0.8t2lf0i.mongodb.net/?retryWrites=true&w=majority
 
 #node mailer (tài khoản gmail)
 NODE_MAILER_USER=yourEmail
@@ -24,18 +24,18 @@ JWT_SECRET_REFRESH_KEY=yourKey
 JWT_ISS=TTBStore
 
 #google plus API
-GOOGLE_CLIENT_ID=yourAccount
-GOOGLE_CLIENT_SECRET=yourAccount
+GOOGLE_CLIENT_ID=982881621832-1efinfri5l8dhq6cstg2j7gb4737sgib.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # Facebook OAuth2
-FACEBOOK_CLIENT_ID=yourFB_API_ID
-FACEBOOK_CLIENT_SECRET=yourFB_API_Serect
+FACEBOOK_CLIENT_ID=1562384450946248
+FACEBOOK_CLIENT_SECRET=da6c2d741a3473fd8828c1b20ca86813
 
 # nodemailer
 NODE_MAILER_USER=yourEmail
 NODE_MAILER_PASSWORD=yourEmailPassword
 
 #cloudinary
-CLOUD_NAME=yourCloudName
-CLOUD_API_KEY=...
-CLOUD_API_SECRET=...
+CLOUD_NAME=dmdjl8w8l
+CLOUD_API_KEY=396321344445289
+CLOUD_API_SECRET=QdqvXcNCCyQf2AoJ10ukya_LjjU
