--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 		"@reduxjs/toolkit": "^1.6.0",
 		"axios": "^0.21.1",
 		"compressorjs": "^1.0.7",
+		"gapi-script": "^1.2.0",
 		"query-string": "^7.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
