--- a/backend/.env
+++ b/backend/.env
@@ -9,10 +9,10 @@ SALT_ROUND=10
 #(default=10)
 
 # MongoDb URL online server
-MONGO_URL=yourCloudUrlMongoServer
+MONGO_URL= mongodb+srv://hoangdv2429:zFsq9Fm8XqERPryR@cluster0.8t2lf0i.mongodb.net/?retryWrites=true&w=majority
 
 # MongoDb URL local server
-MONGO_URL_LOCAL=mongodb://localhost:27017/dictionary
+MONGO_URL_LOCAL=mongodb+srv://hoangdv2429:zFsq9Fm8XqERPryR@cluster0.8t2lf0i.mongodb.net/?retryWrites=true&w=majority
 
 #node mailer (tài khoản gmail)
 NODE_MAILER_USER=yourEmail
