--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,9 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build && ./auto-deploy.cmd",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"deploy": "react-scripts build && ./auto-deploy.cmd"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
