--- a/backend/.env
+++ b/backend/.env
@@ -23,19 +23,19 @@ JWT_SECRET_KEY=yourKey
 JWT_SECRET_REFRESH_KEY=yourKey
 JWT_ISS=TTBStore
 
-#google plus API
-GOOGLE_CLIENT_ID=yourAccount
-GOOGLE_CLIENT_SECRET=yourAccount
-
-# Facebook OAuth2
-FACEBOOK_CLIENT_ID=yourFB_API_ID
-FACEBOOK_CLIENT_SECRET=yourFB_API_Serect
-
 # nodemailer
 NODE_MAILER_USER=yourEmail
 NODE_MAILER_PASSWORD=yourEmailPassword
 
+#google plus API
+GOOGLE_CLIENT_ID=982881621832-1efinfri5l8dhq6cstg2j7gb4737sgib.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+# Facebook OAuth2
+FACEBOOK_CLIENT_ID=1562384450946248
+FACEBOOK_CLIENT_SECRET=da6c2d741a3473fd8828c1b20ca86813
+
 #cloudinary
-CLOUD_NAME=yourCloudName
-CLOUD_API_KEY=...
-CLOUD_API_SECRET=...
+CLOUD_NAME=dmdjl8w8l
+CLOUD_API_KEY=396321344445289
+CLOUD_API_SECRET=QdqvXcNCCyQf2AoJ10ukya_LjjU
